# simplot

./: README.md  pyproject.toml
simplot/: __main__.py
